force-app/main/default/objects/Split_Payment_Setting__mdt/Split_Payment_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Admin-configurable settings for the N-Genius split-payment (deposit/balance) integration — read via CARASplitPaymentSettings. Ships with one record, &quot;Default&quot;.</description>
    <label>Split Payment Setting</label>
    <pluralLabel>Split Payment Settings</pluralLabel>
</CustomObject>