force-app/main/default/objects/Split_Payment_Setting__mdt/fields/Deposit_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Percentage__c</fullName>
    <description>Fraction of price requested as a deposit when creating a deposit basket — e.g. 0.25 means 25%. Read by CARADepositBasketQueueable via CARASplitPaymentSettings.</description>
    <label>Deposit Percentage</label>
    <precision>3</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>