force-app/main/default/objects/Split_Payment_Setting__mdt/fields/Max_Retry_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Max_Retry_Attempts__c</fullName>
    <description>Total attempts (including the first) for a split-payment SFCC/MRT callout before a retryable failure (502 / network error) is surfaced. 1 means no retry. 400 and 401 are never retried regardless of this value.</description>
    <label>Max Retry Attempts</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>