force-app/main/default/objects/Split_Payment_Setting__mdt/fields/Retryable_Status_Codes__c.field-meta.xml
<CustomField>
    <fullName>Retryable_Status_Codes__c</fullName>
    <description>Comma-separated HTTP status codes that should be retried, e.g. &quot;502&quot; or &quot;502,503,504&quot;. Never list 400 or 401 here — those are payload/auth errors and must always surface immediately.</description>
    <label>Retryable Status Codes</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>