force-app/main/default/objects/Split_Payment_Setting__mdt/fields/Storefront_Base_URI__c.field-meta.xml
<CustomField>
    <fullName>Storefront_Base_URI__c</fullName>
    <description>Base URL of the SFCC storefront (including locale path, e.g. /en-ae) used to build the deposit/balance payment links sent in customer emails. If SFCC/MRT returns a relative path in its &quot;link&quot; response field, this is prepended to form the full URL; an absolute link from SFCC is used as-is. Read by CARASplitPaymentSettings via CARASplitPaymentNotificationService.</description>
    <label>Storefront Base URI</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>